--- a/backend/src/routes/services/todo.txt
+++ b/backend/src/routes/services/todo.txt
@@ -11,6 +11,11 @@ dont be like akash and accidently send api key in github
 
 better parsing look for a library or something
 
+
+
+
+HERE WHAT I DID:
+
 what i did rn for sse, it works just issues and its rough:
 so basically we hit backend /start it makes outline and first step and sends it to frontend
 also creates a session in memory, which has id, prompt, outline, what step we on, previous step for context for the llm whatever
@@ -23,7 +28,7 @@ to generate the next step and then it broadcasts it, a fancy way of saying it fu
 then theres lots of error handling, when its done delete session delete subscriber
 just understand all ts make sure it makes sense cuz its rough rn
 
-here r some issues might be more:
+Yo Saf here r some issues might be more:
 
 like okay say step1 it creates a point p1 and a line f1, step2 it updates the line f1, step3 it was only given prev step so maybe it tries to create a point
 again and uses p1 since it only thinks f1 exists, then it fucks up. probably gotta send it like a whole list of objects and update parameters
@@ -33,8 +38,9 @@ then we updated f1 so for step 3 we send it
 p1, (1,2,3), f1, (x^3) or some shit yk so it knows all objects not just from last step
 so yeah see how we can store and send an updated objects summary list after every step 
 
-another issue i started at step 0 so in debugging i added one to it things might be fucked up or mismatched by 1 idk might be right too its hella confusing lol
-
 and maybe proper cleanup make sure sessions get deleted after just no huge errors blablabla
 
 also yk maybe fuck around with the prompt if u want to get it faster after the whole sse is done and fuck around with diff models
+
+ALSO something important maybe if a step fails like it cant be parsed sometimes the model puts a bad format
+we can just easy regenerate that step maybe add a fallback
